# QCInspection

./: CMakeLists.txt  main.cpp  templateMatching.cpp
